--- a/404.html
+++ b/404.html
@@ -18,9 +18,10 @@ layout: default
 </style>
 
 <div class="container">
-  <img src="/mion-docs/assets/images/mion-broken-404.png" />
+  <img src="/assets/images/mion-broken-404.png" />
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+  <p>You can either navigate on the left or use the powerful search above.</p>
 </div>
