--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Redirecting</title>
   <script>
-    window.location.replace("2020.12");
+    window.location.replace("latest");
   </script>
 </head>
 <body>
